# boring

./: .travis.yml  ChangeLog.md  README.md  boring.cabal  cabal.haskell-ci  cabal.project
.github/workflows/: haskell-ci.yml
boring/: ChangeLog.md  boring.cabal
boring-instances/: boring-instances.cabal
boring-instances/src/Data/Boring/: Instances.hs
boring/src/Data/: Boring.hs
src/Data/: Boring.hs
